<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new_jobs"
        android:enabled="true"
        android:icon="@drawable/ic_action_new_jobs"
        android:title="@string/new_jobs"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_current_jobs"
        android:enabled="true"
        android:icon="@drawable/ic_action_current_jobs"
        android:title="@string/current_jobs"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_freezers"
        android:enabled="true"
        android:icon="@drawable/ic_action_freezers"
        android:title="@string/freezers"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_job_submit"
        android:enabled="true"
        android:icon="@drawable/ic_action_job_submit"
        android:title="@string/job_submit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_user"
        android:enabled="true"
        android:icon="@drawable/ic_action_user"
        android:title="@string/account_info"
        app:showAsAction="ifRoom" />
</menu>