<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:baselineAligned="false"
    tools:context=".FreezersFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:background="@drawable/top_bottom_border"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/freezer_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/freezer_details"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/freezer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/name"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/freezer_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/address"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/freezer_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/phone"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/freezer_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/freezer_stock"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/freezer_meal1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/meal_1"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/freezer_meal2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/meal_2"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/freezer_meal3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/meal_3"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
