<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:id="@+id/LoginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/login_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoImage"
            android:src="@drawable/logo"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextNewEmail"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:padding="15dp"
            android:background="@drawable/textbox_background"
            android:ems="10"
            android:inputType="textWebEmailAddress"
            android:hint="@string/email" />


        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:padding="15dp"
            android:background="@drawable/textbox_background"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:padding="15dp"
            android:background="@drawable/textbox_background"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/confirm_password" />

        <ProgressBar
            android:id="@+id/registerProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress"/>

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_bg"
            android:text="@string/register" />

        <TextView
            android:id="@+id/lblGoToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:textAlignment="center"
            android:text="@string/or_login" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>