<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CurrentJobsFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/currentJobsViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/currentJobTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/myConfirmedTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_confirmed" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/myOutstandingTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_outstanding" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/branchOutstandingTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/branch_outstanding" />
        </com.google.android.material.tabs.TabLayout>
    </androidx.viewpager.widget.ViewPager>

</LinearLayout>