<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Login">

<LinearLayout
    android:id="@+id/LoginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_bg"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/logoImage"
        android:src="@drawable/logo"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editTextUserEmail"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:background="@drawable/textbox_background"
        android:drawableStart="@drawable/ic_person_outline_black_24dp"
        android:ems="10"
        android:inputType="textWebEmailAddress"
        android:hint="@string/email" />


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/textbox_background"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_bg"
        android:text="@string/login" />

    <TextView
        android:id="@+id/lblRegisterHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:textAlignment="center"
        android:text="@string/register_here" />

</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>