<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:id="@+id/freezer_update_fragment"
    android:background="@drawable/recycler_border">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/item_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrey"
                android:visibility="gone"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/freezer_meal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrey"
                android:visibility="gone"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/freezer_meal_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="10dp"
                android:text="Mac &amp; Cheese"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/freezer_stock_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/x2"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="22sp"/>

            <Button
                android:id="@+id/decrement_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:onClick="actionDecrement"
                android:text="@string/minus"
                android:textSize="22sp"
                android:background="@drawable/freezer_border"/>

            <EditText
                android:id="@+id/quantity_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="text"
                android:text="@string/_0"
                android:textSize="25sp" />

            <Button
                android:id="@+id/increment_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="10dp"
                android:onClick="actionIncrement"
                android:text="@string/add"
                android:textSize="25sp"
                android:background="@drawable/freezer_border"/>
        </LinearLayout>
    </LinearLayout>




</LinearLayout>
